[package]
name = "pstats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = { version = "0.24.6", default-features = false }
serde_json = "1.0.82"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
